# gristle

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_USAGE_GUIDE.md  README.md  SECURITY.md  docker-compose.yml  dprojectsgristlescriptstest_output.txt  gristle-spec.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  release.yml
docs/: audience.md  future-improvements.md  gristle-schema-extractor.md  integration-guide.md  schema-extractor-handoff.md  ziggy-integration.md
examples/: README.md
examples/sample-app/app/: main.py  models.py  services.py
examples/sample-app/tests/: test_services.py
scripts/: check_docs.py  run_test_docs.bat  run_tests.bat  test_docs.py  test_enriched.py
src/gristle/: __init__.py  cli.py  config.py  logging.py  models.py
src/gristle/graph/: __init__.py  client.py  schema.py
src/gristle/ingestion/: batch.py  dependency_checker.py  pipeline.py  schema_extractor.py  walker.py  watcher.py
src/gristle/mcp/: auth.py  server.py
src/gristle/parsers/: __init__.py  base.py  config.py  drizzle.py  env_vars.py  markdown.py  orm_python.py  orm_typescript.py  prisma.py  python.py  registry.py  security.py  sfc.py  sql.py  supabase.py  typescript.py
src/gristle/query/: engine.py
src/gristle/search/: embeddings.py
src/gristle/viz/: __init__.py  render.py  template.html
src/gristle/viz/assets/: VENDORED.md
tests/: conftest.py  test_auth.py  test_batch.py  test_call_resolution.py  test_callback_detection.py  test_cli.py  test_code_quality.py  test_config.py  test_cypher_dialect.py  test_dependency_checker.py  test_drizzle_parser.py  test_embeddings.py  test_graph_client.py  test_live_smoke.py  test_logging.py  test_markdown_parser.py  test_mcp_server.py  test_orm_python.py  test_orm_typescript.py  test_parser.py  test_parser_registry.py  test_prisma_parser.py  test_query_engine.py  test_schema.py  test_schema_extractor.py  test_security.py  test_sfc_parser.py  test_sql_parser.py  test_subgraph.py  test_supabase_parser.py  test_type_flow.py  test_typescript_parser.py  test_viz.py  test_walker.py  test_watcher.py
tests/fixtures/sample_drizzle/: schema.ts
tests/fixtures/sample_prisma/: schema.prisma
tests/fixtures/sample_python/: models.py  services.py  utils.py
