[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gristle"
version = "0.1.0"
description = "Graph-based code intelligence for AI agents"
requires-python = ">=3.11"
dependencies = [
    "falkordb>=1.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "ast-grep-py>=0.30.0",
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "watchfiles>=0.20.0",
    "gitpython>=3.1.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
gristle = "gristle.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gristle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
