[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gristle"
version = "0.1.0"
description = "Graph-based code intelligence for AI agents"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "falkordb>=1.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "ast-grep-py>=0.30.0",
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "watchfiles>=0.20.0",
    "gitpython>=3.1.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.urls]
Repository = "https://github.com/your-org/gristle"

[project.scripts]
gristle = "gristle.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gristle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["gristle"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
